--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.0.0",
     "@stripe/stripe-js": "^1.0.0",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "micro": "latest",
     "micro-cors": "latest",
